# cem-tool

./: .gitignore  32bit.txt  meson.build  readme.md
.github/: dependabot.yml
.github/workflows/: build.yml  release.yml
inc/: cem_tool.hpp  fusion_ext.hpp  string_helper.hpp  zip_archive.hpp
src/: cem_tool.cpp  entry.cpp  fusion_ext.cpp  fusion_ext.hpp  string_helper.cpp  zip_archive.cpp
subprojects/: minizip-ng.wrap
